# NativeAppSpider

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
examples/: zapmap.yaml
src/appspider/: __init__.py  analyzer.py  cli.py  crawler.py  device.py  hasher.py  reporter.py
src/nativeappspider/: __init__.py  analyzer.py  cli.py  crawler.py  device.py  recorder.py  reporter.py
tests/: conftest.py
tests/fixtures/: extract_fixture.py
tests/fixtures/settings/: scenario.json
tests/integration/: replay.py  test_crawl_replay.py
tests/unit/: test_analyzer.py  test_crawler.py  test_device.py  test_hasher.py  test_reporter.py
